Implementing slider component and programs component

--- a/components/about-us/style/BannerSection.module.scss
+++ b/components/about-us/style/BannerSection.module.scss
@@ -1,5 +1,5 @@
 .educationBannerSection {
-    background-image: radial-gradient(#357FFA, #094DBE);
+    background-image: radial-gradient(#FAC035, #F07F05);
     .container {
         display: flex;
         min-height: 350px;
