--- a/components/home/style/blog-slider.module.css
+++ b/components/home/style/blog-slider.module.css
@@ -1,6 +1,10 @@
 .blog_slider_section {
   padding: 30px 0;
   background-color: #EFEFEF;
+  border-radius: 30px;
+  width: 80%;
+  margin: auto;
+  margin-top: 20px;
 }
 
 .blog_slider_section .slider_component_container.swiper_container {
