--- a/components/footer/style/footer.module.scss
+++ b/components/footer/style/footer.module.scss
@@ -16,6 +16,11 @@ margin-bottom: 12px;
         }
         .footer_col {
             margin-bottom: 16px;
+            width: 10%;
+        }
+        .footer_col_right {
+            width: 90%;
+            margin-bottom: 16px;
         }
         .footer_desc {
             padding-left: 30px;
@@ -27,6 +32,7 @@ margin-bottom: 12px;
         margin-left: auto;
         margin-right: auto;
         flex-wrap: wrap;
+        width: 100%;
         &.secound_footer {
             align-items: center;
             justify-content: space-between;
