--- a/components/home/style/blog-slider.module.scss
+++ b/components/home/style/blog-slider.module.scss
@@ -1,8 +1,13 @@
 .blog_slider_section {
     padding: 30px 0;
     background-color: #EFEFEF;
+    border-radius: 30px;
+    width: 80%;
+    margin: auto;
+    margin-top: 20px;
     .slider_component_container.swiper_container {
         padding-top: 10px;
+        
     }
     .section_title {
         font-size: 32px;
