--- a/components/home/style/slide-card.module.scss
+++ b/components/home/style/slide-card.module.scss
@@ -1,15 +1,24 @@
 .slider_card_container {
   display: flex;
+  flex-direction: row;
+    justify-content: center;
   margin: 0 auto;
-  max-width: 800px;
+  max-width: 75%;
   color: #000000;
   .card_banner {
     margin-left: 27px;
+    width: 100%;
+    
     img {
       width: 100%;
       height: 100%;
       max-width: 285px;
       border-radius: 20px;
+    }
+    .cardImg{
+      
+      width: 100%;
+      height: 100%;
     }
   }
   .btn_danger {
@@ -37,7 +46,7 @@
   .card_content {
     flex: 1;
     .card_title {
-      font-size: 25px;
+      font-size: 20px;
       line-height: 43px;
       font-weight: 500;
       margin-top: 12px;
@@ -49,6 +58,15 @@
       font-weight: normal;
       margin-bottom: 12px;
     }
+    .card_heading {
+      font-size: 14px;
+      line-height: 24px;
+      font-weight: bold;
+      margin-bottom: 12px;
+      color: #494646 !important;
+      width: 150px;
+    }
+
     .card_actions {
       display: flex;
       flex-direction: row;
@@ -78,6 +96,8 @@
 }
 .card{
   margin-bottom: 20px;
+  border: 1px #2b2828;
+  border-radius: 20px;
 }
 
 @media (max-width: 992px) {
