--- a/components/home/style/slide-card.module.css
+++ b/components/home/style/slide-card.module.css
@@ -2,6 +2,16 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: 0 auto;
+  max-width: 70%;
+  color: #000000;
+}
+
+.slider_card_container .card_banner {
+  margin-left: 27px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -9,14 +19,6 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 0 auto;
-  max-width: 75%;
-  color: #000000;
-}
-
-.slider_card_container .card_banner {
-  margin-left: 27px;
-  width: 100%;
 }
 
 .slider_card_container .card_banner img {
@@ -27,6 +29,7 @@
 }
 
 .slider_card_container .card_banner .cardImg {
+  max-width: 485px;
   width: 100%;
   height: 100%;
 }
@@ -77,13 +80,24 @@
   margin-bottom: 12px;
 }
 
+.slider_card_container .card_content .card_description {
+  font-size: 10px;
+  line-height: 24px;
+  font-weight: normal;
+  margin-bottom: 12px;
+  color: #494646 !important;
+  width: 150px;
+  font-family: "IRANSans";
+}
+
 .slider_card_container .card_content .card_heading {
   font-size: 14px;
   line-height: 24px;
   font-weight: bold;
   margin-bottom: 12px;
   color: #494646 !important;
-  width: 150px;
+  width: 155px;
+  font-family: "IRANSans";
 }
 
 .slider_card_container .card_content .card_actions {
@@ -117,11 +131,11 @@
 }
 
 .programs_title {
-  font-size: 25px;
+  font-size: 20px;
   line-height: 43px;
   font-weight: 500;
   margin: auto;
-  width: 50%;
+  width: 60%;
   margin-bottom: 20px;
   margin-top: 20px;
 }
