--- a/components/home/style/slide-card.module.scss
+++ b/components/home/style/slide-card.module.scss
@@ -1,14 +1,13 @@
 .slider_card_container {
   display: flex;
-  flex-direction: row;
-    justify-content: center;
   margin: 0 auto;
-  max-width: 75%;
+  max-width: 70%;
   color: #000000;
   .card_banner {
     margin-left: 27px;
-    width: 100%;
-    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     img {
       width: 100%;
       height: 100%;
@@ -16,11 +15,18 @@
       border-radius: 20px;
     }
     .cardImg{
-      
+      max-width: 485px;
       width: 100%;
       height: 100%;
+   
     }
+  
   }
+  // .card{
+  //   display: flex;
+  //   flex-direction: column;
+  //   justify-content: center;
+  // }
   .btn_danger {
     color: #fff;
     background-color: #Ff2e17 !important;
@@ -58,13 +64,23 @@
       font-weight: normal;
       margin-bottom: 12px;
     }
+    .card_description{
+      font-size: 10px;
+      line-height: 24px;
+      font-weight: normal;
+      margin-bottom: 12px;
+      color: #494646 !important;
+      width: 150px;
+      font-family: "IRANSans";
+    }
     .card_heading {
       font-size: 14px;
       line-height: 24px;
       font-weight: bold;
       margin-bottom: 12px;
       color: #494646 !important;
-      width: 150px;
+      width: 155px;
+      font-family: "IRANSans";
     }
 
     .card_actions {
@@ -86,11 +102,11 @@
 
 
 .programs_title {
-  font-size: 25px;
+  font-size: 20px;
   line-height: 43px;
   font-weight: 500;
  margin: auto;
-  width: 50%;
+  width: 60%;
   margin-bottom: 20px;
   margin-top: 20px;
 }
