--- a/components/home/style/Register.module.css
+++ b/components/home/style/Register.module.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: myFirstFont;
-  src: url("../../../public//font//FontsFree-Net-ir_sans.ttf");
+  src: url("../../../public/font/FontsFree-Net-ir_sans.ttf");
 }
 
 .topSidebarImg {
@@ -75,6 +75,7 @@
 .input {
   width: 48% !important;
   height: 45px;
+  font-family: "IRANSans";
 }
 
 .radioButton {
