--- a/components/home/style/Register.module.scss
+++ b/components/home/style/Register.module.scss
@@ -5,7 +5,7 @@ $border-radius-30: 30px !important;
 
 @font-face {
   font-family: myFirstFont;
-  src: url('../../../public//font//FontsFree-Net-ir_sans.ttf');
+  src: url('../../../public/font/FontsFree-Net-ir_sans.ttf');
 }
 
 @mixin displayFlex-row-center {
@@ -82,6 +82,7 @@ $border-radius-30: 30px !important;
 .input {
   width: 48% !important;
   height: 45px;
+  font-family: "IRANSans";
 }
 
 .radioButton {
