--- a/components/home/style/slide-card.module.scss
+++ b/components/home/style/slide-card.module.scss
@@ -73,6 +73,9 @@
       width: 150px;
       font-family: "IRANSans";
     }
+    .card_button{
+      font-family: "IRANSans" !important;
+    }
     .card_heading {
       font-size: 14px;
       line-height: 24px;
