--- a/components/home/style/slide-card.module.scss
+++ b/components/home/style/slide-card.module.scss
@@ -4,7 +4,7 @@
   max-width: 70%;
   color: #000000;
   .card_banner {
-    margin-left: 27px;
+    margin: 20px;
     display: flex;
     flex-direction: row;
     justify-content: center;
