--- a/components/home/style/slide-card.module.css
+++ b/components/home/style/slide-card.module.css
@@ -8,7 +8,7 @@
 }
 
 .slider_card_container .card_banner {
-  margin-left: 27px;
+  margin: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
