--- a/components/home/style/blog-slider.module.css
+++ b/components/home/style/blog-slider.module.css
@@ -2,7 +2,8 @@
   padding: 30px 0;
   background-color: #EFEFEF;
   border-radius: 30px;
-  width: 80%;
+  width: 70%;
+  height: 450px;
   margin: auto;
   margin-top: 20px;
 }
