--- a/pages/home/Home.module.css
+++ b/pages/home/Home.module.css
@@ -13,4 +13,18 @@
   margin: auto;
   padding: 30px 0;
 }
+
+.flexRow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
 /*# sourceMappingURL=Home.module.css.map */
