--- a/pages/home/Home.module.scss
+++ b/pages/home/Home.module.scss
@@ -6,3 +6,10 @@
     margin: auto;
     padding: 30px 0;
 }
+
+.flexRow{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
