--- a/pages/home/Home.module.css
+++ b/pages/home/Home.module.css
@@ -9,9 +9,13 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 90%;
+  width: 97%;
+  margin-top: 15px !important;
+  margin-bottom: 15px !important;
   margin: auto;
   padding: 30px 0;
+  border-radius: 30px;
+  background-color: #EFEFEF;
 }
 
 .flexRow {
