--- a/pages/home/Home.module.scss
+++ b/pages/home/Home.module.scss
@@ -2,9 +2,14 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 90%;
+    width: 97%;
+    margin-top: 15px !important;
+    margin-bottom: 15px !important;
     margin: auto;
     padding: 30px 0;
+    border-radius: 30px;
+  
+    background-color: #EFEFEF;
 }
 
 .flexRow{
