--- a/components/home/style/Login.module.scss
+++ b/components/home/style/Login.module.scss
@@ -22,6 +22,11 @@
 
 .formButton{
     margin: 10px;
-
+    text-align: center;
     width: 40%;
+  
+}
+
+.aButton{
+    color: rgb(113, 120, 134);
 }
