Implementing new slider

--- a/components/home/style/blog-slider.module.scss
+++ b/components/home/style/blog-slider.module.scss
@@ -6,6 +6,7 @@
     height: 450px;
     margin: auto;
     margin-top: 20px;
+    position: relative;
     .slider_component_container.swiper_container {
         padding-top: 10px;
         
