--- a/components/home/style/slide-card.module.scss
+++ b/components/home/style/slide-card.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   margin: 0 auto;
   max-width: 70%;
+  position: relative;
   color: #000000;
   .card_banner {
     margin: 20px;
@@ -49,20 +50,21 @@
     border-radius: 5px;
  
   }
-  .card_content {
-    flex: 1;
+ 
     .card_title {
       font-size: 20px;
       line-height: 43px;
       font-weight: 500;
       margin-top: 12px;
       margin-bottom: 8px;
+      position: absolute;
     }
     .card_text {
       font-size: 14px;
       line-height: 24px;
       font-weight: normal;
       margin-bottom: 12px;
+      position: absolute;
     }
     .card_description{
       font-size: 10px;
@@ -72,9 +74,11 @@
       color: #494646 !important;
       width: 150px;
       font-family: "IRANSans";
+      position: absolute;
     }
     .card_button{
       font-family: "IRANSans" !important;
+      position: absolute;
     }
     .card_heading {
       font-size: 14px;
@@ -87,6 +91,7 @@
     }
 
     .card_actions {
+      position: absolute;
       display: flex;
       flex-direction: row;
       justify-content: left;
@@ -95,7 +100,7 @@
       }
     }
   }
-}
+
 
 .programs_content{
   display: flex;
